# hatch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
agents/: backend.toml  data.toml  devops.toml  frontend.toml  generic.toml
crates/hatch-agent/: Cargo.toml
crates/hatch-agent/src/: agent.rs  context.rs  generic.rs  lib.rs
crates/hatch-bus/: Cargo.toml
crates/hatch-bus/src/: bus.rs  lib.rs  messages.rs
crates/hatch-cli/: Cargo.toml
crates/hatch-cli/src/: chat.rs  main.rs  pipeline.rs
crates/hatch-console/: Cargo.toml
crates/hatch-console/src/: lib.rs
crates/hatch-core/: Cargo.toml
crates/hatch-core/src/: error.rs  lib.rs  types.rs
crates/hatch-llm/: Cargo.toml
crates/hatch-llm/src/: lib.rs  message.rs  ollama.rs  openai.rs  providers.rs  stream.rs  types.rs
crates/hatch-planner/: Cargo.toml
crates/hatch-planner/src/: lib.rs  planner.rs
crates/hatch-spawner/: Cargo.toml
crates/hatch-spawner/src/: lib.rs  spawner.rs  template.rs
crates/hatch-supervisor/: Cargo.toml
crates/hatch-supervisor/src/: lib.rs  supervisor.rs
examples/build_todo_app/: Cargo.toml
examples/build_todo_app/src/: main.rs
