[package]
name = "hatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, traits, and errors for the HATCH orchestration framework."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
