[package]
name = "hatch-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction with OpenAI and Ollama implementations for HATCH."

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hatch-core = { path = "../hatch-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
